events inner page date alignment fixed

--- a/docroot/sites/all/themes/ambitious/css/layouts/topic-forum.css
+++ b/docroot/sites/all/themes/ambitious/css/layouts/topic-forum.css
@@ -1521,7 +1521,7 @@ a:hover.tooltips span.tooltip-content {
 }
 /* line 382, ../../sass/content.scss */
 .my-voice-main .action-block .block-symptoms, .my-voice-main .action-block .block-share, .my-voice-main .action-block .block-spectrum {
-  background-image: url('../../images/bg06.jpg?1424183360');
+  background-image: url('../../images/bg06.jpg?1424101657');
   color: #ffffff;
   width: 48.5%;
   padding: 50px 10px 37px 39px;
@@ -1591,15 +1591,15 @@ a:hover.tooltips span.tooltip-content {
 }
 /* line 433, ../../sass/content.scss */
 .my-voice-main .block-share {
-  background-image: url('../../images/bg08.jpg?1424183360');
+  background-image: url('../../images/bg08.jpg?1424101657');
 }
 /* line 437, ../../sass/content.scss */
 .my-voice-main .block-spectrum {
-  background-image: url('../../images/bg07.jpg?1424183360');
+  background-image: url('../../images/bg07.jpg?1424101657');
 }
 /* line 440, ../../sass/content.scss */
 .my-voice-main .block-report {
-  background-image: url('../../images/bg05.jpg?1424183360');
+  background-image: url('../../images/bg05.jpg?1424101657');
   float: right;
 }
 /* line 444, ../../sass/content.scss */
@@ -1742,7 +1742,7 @@ a:hover.tooltips span.tooltip-content {
   right: 8px;
   bottom: -13px;
   content: "";
-  background: url('../../images/sprite.png?1424183361') no-repeat -128px 0;
+  background: url('../../images/sprite.png?1424101657') no-repeat -128px 0;
   width: 12px;
   height: 13px;
 }
@@ -1780,7 +1780,7 @@ a:hover.tooltips span.tooltip-content {
 }
 /* line 585, ../../sass/content.scss */
 .my-voice-post .content .comment-count {
-  background: no-repeat url('../../images/comment-sprite.png?1424183360');
+  background: no-repeat url('../../images/comment-sprite.png?1424101657');
   padding: 7px 0px 17px 0;
   width: 46px;
   text-align: center;
@@ -1799,7 +1799,7 @@ a:hover.tooltips span.tooltip-content {
 }
 /* line 595, ../../sass/content.scss */
 .my-voice-post .content .comment-count.zero {
-  background: no-repeat url('../../images/comment-sprite.png?1424183360') 0 -52px;
+  background: no-repeat url('../../images/comment-sprite.png?1424101657') 0 -52px;
 }
 /* line 597, ../../sass/content.scss */
 .my-voice-post .content .comment-count.zero .count {
@@ -2077,7 +2077,7 @@ a:hover.tooltips span.tooltip-content {
 }
 /* line 819, ../../sass/content.scss */
 .action-block .block-share {
-  background-image: url('../../images/bg08.jpg?1424183360');
+  background-image: url('../../images/bg08.jpg?1424101657');
   float: left;
 }
 /* line 822, ../../sass/content.scss */
@@ -2104,7 +2104,7 @@ a:hover.tooltips span.tooltip-content {
 }
 /* line 836, ../../sass/content.scss */
 .action-block .block-spectrum {
-  background-image: url('../../images/bg07.jpg?1424183360');
+  background-image: url('../../images/bg07.jpg?1424101657');
   float: right;
 }
 /* line 839, ../../sass/content.scss */
@@ -4094,7 +4094,7 @@ fieldset {
 @media (max-width: 767px) {
   /* line 1172, ../../sass/layouts/topic-forum.scss */
   .node-type-topic .block-inspire.orange-box {
-    background-image: url('../../images/action-bg2.jpg?1424183360');
+    background-image: url('../../images/action-bg2.jpg?1424101657');
   }
 }
 
@@ -4554,13 +4554,8 @@ fieldset {
     margin-bottom: 15px;
   }
 }
-/* line 1615, ../../sass/layouts/topic-forum.scss */
-.view-display-id-events_page .my-voice-post .line {
-  position: absolute;
-  margin-left: -24px;
-}
 
-/* line 1623, ../../sass/layouts/topic-forum.scss */
+/* line 1619, ../../sass/layouts/topic-forum.scss */
 .page-node-74606 #content_top {
   z-index: 99;
   margin-top: -131px;
@@ -4568,57 +4563,62 @@ fieldset {
   margin-left: 15px;
 }
 @media (max-width: 767px) {
-  /* line 1624, ../../sass/layouts/topic-forum.scss */
+  /* line 1620, ../../sass/layouts/topic-forum.scss */
   .page-node-74606 #content_top .stButton {
     padding: 10px 33%;
   }
-  /* line 1627, ../../sass/layouts/topic-forum.scss */
+  /* line 1623, ../../sass/layouts/topic-forum.scss */
   .page-node-74606 #content_top .stButton:before {
     font-size: 30px;
     margin-bottom: -7px;
   }
 }
-/* line 1642, ../../sass/layouts/topic-forum.scss */
+/* line 1638, ../../sass/layouts/topic-forum.scss */
 .page-node-74606 #content_top .my-voice-columns .col {
   padding-top: 0;
   padding-bottom: 0;
 }
-/* line 1646, ../../sass/layouts/topic-forum.scss */
+/* line 1642, ../../sass/layouts/topic-forum.scss */
 .page-node-74606 #content_top .my-voice-columns .form-item {
   float: left;
   width: 96%;
   margin-bottom: 9px;
 }
-/* line 1650, ../../sass/layouts/topic-forum.scss */
+/* line 1646, ../../sass/layouts/topic-forum.scss */
 .page-node-74606 #content_top .my-voice-columns .form-item label {
   left: 24px;
   top: 12px;
 }
-/* line 1655, ../../sass/layouts/topic-forum.scss */
+/* line 1651, ../../sass/layouts/topic-forum.scss */
 .page-node-74606 #content_top .my-voice-columns a.tooltips span.tooltip-content {
   left: -45px;
   bottom: 30px;
 }
-/* line 1659, ../../sass/layouts/topic-forum.scss */
+/* line 1655, ../../sass/layouts/topic-forum.scss */
 .page-node-74606 #content_top .my-voice-columns .description {
   margin-top: 11px;
 }
 
-/* line 1665, ../../sass/layouts/topic-forum.scss */
+/* line 1661, ../../sass/layouts/topic-forum.scss */
 #content_top .my-voice-columns .webform-client-form.webform-client-form-74621 input[type="submit"] {
   border-bottom: 5px solid #b3066b;
   background: #e30087;
 }
-/* line 1668, ../../sass/layouts/topic-forum.scss */
+/* line 1664, ../../sass/layouts/topic-forum.scss */
 #content_top .my-voice-columns .webform-client-form.webform-client-form-74621 input[type="submit"]:hover {
   border-bottom-width: 3px;
 }
 
-/* line 1673, ../../sass/layouts/topic-forum.scss */
+/* line 1669, ../../sass/layouts/topic-forum.scss */
 .views-row-first .my-voice-pos .feature-holder {
   display: inherit;
 }
 
+/* line 1675, ../../sass/layouts/topic-forum.scss */
+.my-voice-post .line {
+  position: absolute;
+  margin-left: -24px;
+}
 /* line 1679, ../../sass/layouts/topic-forum.scss */
 .my-voice-post .feature-holder {
   display: none;
